<resources>

    <!--Strings de Jesús-->

    <string-array name="array_places">

        <item>Restaurantes</item>
        <item>Aeropuertos</item>
        <item>Hoteles</item>
        <item>Hospitales</item>
        <item>Farmacias</item>
        <item>Gasolineras</item>
        <item>Transportes Públicos</item>

    </string-array>
    <string name="app_name">CongresoTFG</string>
    <string name="menu_drawer">Drawer</string>
    <string name="menu_options">Options</string>
    <string name="text_recent_events">Recent Events</string>
    <string name="text_show_all">Show All</string>
    <string name="text_nombre_evento">Nombre Evento</string>
    <string name="text_hora_inicio">00:00</string>
    <string name="menu_like">Like</string>
    <string name="menu_home">Home</string>
    <string name="menu_location">Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_eat_zones">Eat Zones</string>
    <string name="txt_cerrar_sesión">Cerrar sesión</string>
    <string name="txt_modo_oscuro">Modo oscuro</string>
    <string name="text_contact">Contact</string>
    <string name="text_about">About</string>
    <string name="text_my_tickets">My Tickets</string>
    <string name="text_partners">Partners</string>
    <string name="text_my_list">My List</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <string name="text_init_app">Home</string>
    <string name="text_home">Home</string>
    <string name="text_like">Like</string>
    <string name="text_location">Location</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC8VbuNhEYR1-y-sb_47RgUMTOfXwgabs4</string>
    <string name="text_salida">Salida</string>
    <string name="txt_restaurantes">Restaurantes</string>
    <string name="txt_aeropuertos">Aeropuertos</string>
    <string name="txt_hoteles">Hoteles</string>
    <string name="text_init_location">Location</string>
    <string name="txt_calcular_ruta">Calcular Ruta</string>
    <string name="text_lugares">Lugares</string>
    <string name="text_restaurantes">Restaurantes</string>
    <string name="textview">TextView</string>
    <string name="text_contact_us">Contact Us</string>
    <string name="text_reason">Reason</string>
    <string name="text_message">Message</string>
    <string name="text_send_email">Send Email</string>
    <string name="text_phone_number_contact">616 42 90 25</string>
    <string name="text_number_contact">987 65 43 21</string>
    <string name="text_email_contact">fedemcomunicacion@gmail.com</string>
    <string name="text_que_somos">Qué Somos</string>
    <string name="text_suites">Nuestras suites</string>
    <string name="text_federacion">Federación Española de Empresas de Mudanzas</string>
    <string name="text_lugar_congreso">Lugar Congreso</string>
    <string name="text_id_asistente">ID</string>
    <string name="text_nombre_asistente">Nombre</string>
    <string name="text_apellido_asistente">Apellidos</string>
    <string name="text_username_asistente">Username</string>
    <string name="text_contrasenya_asistente">Contraseña</string>
    <string name="text_cp_asistente">CP</string>
    <string name="text_provincia_asistente">Provincia</string>
    <string name="text_genero_asistente">Genero</string>
    <string name="text_img_asistente">IMG</string>
    <string name="text_bio_asistente">Biografía</string>
    <string name="text_email_asistente">Email</string>
    <string name="text_busqueda">Búsqueda</string>
    <string name="text_nombre_restaurante">Nombre Restaurante</string>

    <!--Strings de Laura-->

    <string name="hintusername">Username</string>
    <string name="hintpassword">Password</string>
    <string name="text_login">Log in</string>
    <string name="register_here">Register here</string>
    <string name="don_t_have_an_account">¿Don’t have an account?</string>
    <string name="recordarmeText">Remember me</string>
    <string name="txt_ponentes"><u>PONENTES:</u></string>
    <string name="txt_asistentes"><u>ASISTENTES:</u></string>
    <string name="txt_descripcion"><u>DESCRIPCIÓN:</u></string>
    <string name="text_chip_restautantes">Restaurants</string>
    <string name="text_chip_eventos">Events</string>
    <string name="text_que_somos_descripcion">Una Federación de asociaciones , con un espíritu de unificar el sector de las mudanzas, con la idea de ofrecer empresas de calidad, con servicios de calidad.</string>
    <string name="text_lugar_congreso_descripcion">El hotel GF Victoria está situado en Costa Adeje, a solo 150 metros de la playa del Duque, y ofrece 4 zonas de baño y dos restaurantes.</string>
    <string name="text_formacion_suites_descripcion">Las 242 suites disponen de un dormitorio con bañoprivado y zona de salón con aseo separado.</string>
    <string name="text_fecha_ticket_asistente">Fecha Ticket</string>
    <string name="main_error_website">Enlace erróneo</string>
    <string name="openToggle">open</string>
    <string name="closeToggle">close</string>
    <string name="text_nombre_eatzone">Nombre restaurante</string>
    <string name="ts_txt5">De esta forma nuestra compañía se responsabiliza en el servicio postventa de cualquier problema que pueda surgir, mejorando y modificando cualquier equivocación.</string>
    <string name="ts_txt4">La empresa ofrece calidad y confianza a todos los clientes, garantizando un bien trabajo libre de todos los errores posibles que puedan suponer fallos en los servicios.</string>
    <string name="ts_txt3">Garantía de nuestros servicios</string>
    <string name="ts_txt2">En nuestra empresa tratamos de conseguir que los servicios sean lo más accesible y sencillos de utilizar posible para las empresas y usuarios.</string>
    <string name="ts_txt1">Somos una start-up de diseño multiplataforma con sede en Valencia. Diseñamos principalmente páginas web y aplicaciones android.</string>
    <string name="titulo_techstorm">TECHSTORM</string>
    <string name="main_error_no_website">Error al cargar la página web</string>
    <string name="text_allEvents">All events</string>
    <string name="main_error_response">Error en la respuesta</string>
    <string name="main_error_server">Error en la llamada</string>
    <string name="btn_asistir_txt">ASIST</string>
    <string name="btn_reservar_txt">RESERVE</string>
    <string name="txt_escribe">Escribe...</string>
    <string name="txtSendMsg">Mi mensaje</string>
    <string name="text_delete_for_everyone">Delete for Everyone</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_delete_for_me">Delete for Me</string>
    <string name="text_name_profile_chat">Nombre Perfil Chat</string>
    <string name="text_status_profile_chat">Status</string>
    <string name="txtReceiveMsg">Su mensaje</string>
    <string name="txt_profile">Profile</string>
    <string name="text_profile">Profile</string>
    <string name="txt_available_bonuses">Available bonuses:</string>
    <string name="txt_valorado">YOU HAVE ALREADY VALUED IT</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="hintemail">Email</string>
    <string name="text_cancel_edit">Cancel</string>
    <string name="text_edit">Edit</string>
    <string name="txt_reservado">You have already booked it</string>
</resources>