<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.congresotfg.Home"
        android:label="@string/text_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/location"
        android:name="com.example.congresotfg.Location"
        android:label="@string/text_location"
        tools:layout="@layout/fragment_location" >
    </fragment>

    <fragment
        android:id="@+id/like"
        android:name="com.example.congresotfg.Like"
        android:label="@string/text_like"
        tools:layout="@layout/fragment_like" />

    <fragment
        android:id="@+id/contact"
        android:name="com.example.congresotfg.ContactoFragment"
        android:label="@string/text_contact"
        tools:layout="@layout/fragment_contacto" />

    <fragment
        android:id="@+id/about"
        android:name="com.example.congresotfg.AboutFragment"
        android:label="@string/text_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/my_tickets"
        android:name="com.example.congresotfg.MyTicketFragment"
        android:label="@string/text_my_tickets"
        tools:layout="@layout/fragment_my_ticket" />
    <!--
    <fragment
        android:id="@+id/friends"
        android:name="com.example.congresotfg.Like"
        android:label="@string/text_like"
        tools:layout="@layout/fragment_like" />
    -->
    <fragment
        android:id="@+id/my_events"
        android:name="com.example.congresotfg.MyListFragment"
        android:label="@string/text_my_list"
        tools:layout="@layout/fragment_my_list" />

</navigation>