<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_my_events"
    tools:context=".myListModule.MyListFragment">

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="32dp">

            <SearchView
                android:id="@+id/sv_busqueda_my_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent"
                android:queryHint="@string/text_busqueda"
                android:iconifiedByDefault="false"
                android:background="@drawable/bordes_redondos"/>

            <Button

                android:id="@+id/btn_eventos"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/sv_busqueda_my_events"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/text_chip_eventos"
                android:textColor="@android:color/white"
                android:textAlignment="center"/>

            <Button

                android:id="@+id/btn_restaurantes"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/sv_busqueda_my_events"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/text_chip_restautantes"
                android:textColor="@android:color/white"
                android:textAlignment="center"/>

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/rv_my_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_eventos"
                tools:listitem="@layout/item_my_events"/>

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/rv_my_restaurants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_eventos"
                tools:listitem="@layout/item_my_restaurants" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>