<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_about"
    tools:context=".aboutModule.AboutFragment">

    <androidx.core.widget.NestedScrollView

        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView

                android:id="@+id/tv_title_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textAlignment="center"
                android:text="@string/text_federacion"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="?attr/textAppearanceHeadline4"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView

                android:id="@+id/tv_que_somos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_about"
                app:layout_constraintStart_toStartOf="@id/tv_que_somos_descripcion"
                app:layout_constraintEnd_toEndOf="@id/tv_que_somos_descripcion"
                android:text="@string/text_que_somos"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView

                android:id="@+id/tv_que_somos_descripcion"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_que_somos"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/text_que_somos_descripcion"
                android:textColor="@android:color/black"/>

            <com.google.android.material.card.MaterialCardView

                android:id="@+id/mcv_que_somos"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_about"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="20dp">

                <ImageView

                    android:id="@+id/img_que_somos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img2"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView

                android:id="@+id/mcv_lugar_congreso"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_que_somos_descripcion"
                app:layout_constraintStart_toStartOf="@id/tv_que_somos_descripcion"
                app:cardCornerRadius="20dp">

                <ImageView

                    android:id="@+id/img_lugar_congreso"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img3"
                    android:scaleType="centerCrop"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView


                android:id="@+id/tv_lugar_congreso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/mcv_lugar_congreso"
                app:layout_constraintStart_toStartOf="@id/tv_lugar_congreso_descripcion"
                app:layout_constraintEnd_toEndOf="@id/tv_lugar_congreso_descripcion"
                android:text="@string/text_lugar_congreso"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView

                android:id="@+id/tv_lugar_congreso_descripcion"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_lugar_congreso"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/text_lugar_congreso_descripcion"
                android:textColor="@android:color/black"/>

            <TextView

                android:id="@+id/tv_formacion_suites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/mcv_formacion_suites"
                app:layout_constraintStart_toStartOf="@id/tv_formacion_suites_descripcion"
                app:layout_constraintEnd_toEndOf="@id/tv_formacion_suites_descripcion"
                android:text="@string/text_formacion_suites"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView

                android:id="@+id/tv_formacion_suites_descripcion"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_formacion_suites"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/text_formacion_suites_descripcion"
                android:textColor="@android:color/black"/>

            <com.google.android.material.card.MaterialCardView

                android:id="@+id/mcv_formacion_suites"
                android:layout_width="200dp"
                android:layout_height="150dp"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/mcv_lugar_congreso"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView

                    android:id="@+id/img_formacion_suites"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img1"
                    android:scaleType="centerCrop"/>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>